--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -8,7 +8,6 @@ h1 {
 }
 
 #search-button, #search-input {
-    max-width: 15%;
     margin-left: 25px;
     margin-top: 8px;
 }
@@ -16,4 +15,12 @@ h1 {
 #city-label {
     font-size: 28px;
     font-weight: bolder;
+}
+
+#current-city-container {
+    border: solid black 2px;
+}
+
+#current-city {
+    color: black;
 }
