--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -38,5 +38,9 @@ h2 {
 #three-days-out-forecast,
 #four-days-out-forecast,
 #five-days-out-forecast {
-    width: 110px;
+    width: 150px;
+}
+
+#recent-searches {
+    color: black;
 }
